# electronic-chessboard-gui

./: CMakeLists.txt  README.md  bluetoothconnectionhandler.cpp  bluetoothconnectionhandler.h  chess_pieces.qrc  chessboard.cpp  chessboard.h  chessboardsquare.cpp  chessboardsquare.h  chessgame.cpp  chessgame.h  dragwidget.cpp  dragwidget.h  evaluationbar.cpp  evaluationbar.h  icons.qrc  inputtextbox.cpp  inputtextbox.h  keyenterreceiver.cpp  keyenterreceiver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectdetectionhandler.cpp  objectdetectionhandler.h  robotcommunicationhandler.cpp  robotcommunicationhandler.h  scheduler.cpp  scheduler.h  serialporthandler.cpp  serialporthandler.h  stockfish.cpp  stockfish.h
